# real-life-context-switching

./: .gitignore  README.md
.github/workflows/: release.yml
frontend/: index.html  main.tsx  package-lock.json  package.json  styles.css  vite.config.js
frontend/src/: App.tsx  api.ts  theme.ts
frontend/src/components/: RecPanel.tsx  TaskRow.tsx  VirtualList.tsx
frontend/src/pages/: Home.tsx
frontend/src/services/: tasks.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.txt
src-tauri/src/: commands.rs  core.rs  domain.rs  housekeeping.rs  main.rs  persistence.rs  score.rs  types.rs
